# SuperNova

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  action-executor  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  start.sh  tauri.conf.json
.github/workflows/: ci.yml  release.yml
api/: __init__.py  doctor.py  main.py  wake.py
cli/: __init__.py  doctor.py  main.py  voice_daemon.py
config/: __init__.py  settings.py
core/: __init__.py  agent.py
core/tools/: __init__.py  doctor.py  wakeword.py
docs/: PRIMEROS_PASOS.md
static/: index.html
